third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-nightly/transmute-mut-dst-not-frombytes.stderr
error[E0277]: the trait bound `Dst: FromBytes` is not satisfied
  --> tests/ui-nightly/transmute-mut-dst-not-frombytes.rs:24:38
   |
24 | const DST_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^
   |                                      |
   |                                      the trait `FromBytes` is not implemented for `Dst`
   |                                      required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(FromBytes)]` to `Dst`
   = help: the following other types implement trait `FromBytes`:
             ()
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
             AtomicU16
             AtomicU32
           and $N others
note: required by a bound in `AssertDstIsFromBytes`
  --> tests/ui-nightly/transmute-mut-dst-not-frombytes.rs:24:38
   |
24 | const DST_NOT_FROM_BYTES: &mut Dst = transmute_mut!(&mut Src);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertDstIsFromBytes`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
